# TCScraper

./: .gitignore  README.md  lider).move_by_offset(0, -1).release().perform()  pyproject.toml  requirements.txt
data/: cars  df_archs  ga  generate_generic_archetypes.txt  generic_archs
src/experiments/: generate_generic_archetypes.py
src/exploratory/: debug.py  qualtricsAPI.ipynb
src/qualtrics/: debug.py  qualtricsAPI.ipynb  test.py
src/tcsscraper/: helper.py  scrape.py
src/tcsscraper/api/: scrape.py  tcs_request.py
src/tcsscraper/experiments/: generate_generic_archetypes.py
src/tcsscraper/exploratory/: debug.py  qualtricsAPI.ipynb
tcsscraper/: helper.py  scrape.py  tcs_request.py  tmp.py
tests/: test_scrape.py
