[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcsscraper"
version = "0.0.1"
authors = [
  { name="Daniel Heimgartner", email="daniel.heimgartner@ivt.baug.ethz.ch" },
]
description = "A package to scrape the TCS website and get car data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dheimgartner/TCScraper"
"Bug Tracker" = "https://github.com/dheimgartner/TCScraper/issues"