[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcsscraper"
version = "0.0.3"
authors = [
  { name="Daniel Heimgartner", email="daniel.heimgartner@ivt.baug.ethz.ch" },
]
description = "A package to scrape the TCS website and get car data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argon2-cffi==21.3.0",
    "argon2-cffi-bindings==21.2.0",
    "async-generator==1.10",
    "attrs==22.1.0",
    "backcall==0.2.0",
    "bleach==4.1.0",
    "certifi==2022.9.24",
    "cffi==1.15.1",
    "charset-normalizer==2.0.12",
    "dataclasses",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "entrypoints==0.4",
    "idna==3.4",
    "importlib-metadata==4.8.3",
    "ipykernel==5.5.6",
    "ipython==7.16.3",
    "ipython-genutils==0.2.0",
    "ipywidgets==7.7.2",
    "jedi==0.17.2",
    "Jinja2==3.0.3",
    "jsonschema==4.0.0",
    "jupyter==1.0.0",
    "jupyter-client==7.1.2",
    "jupyter-console==6.4.3",
    "jupyter-core==4.9.2",
    "jupyterlab-pygments==0.1.2",
    "jupyterlab-widgets==1.1.1",
    "MarkupSafe==2.0.1",
    "mistune==0.8.4",
    "nbclient==0.5.9",
    "nbconvert==6.0.7",
    "nbformat==5.1.3",
    "nest-asyncio==1.5.5",
    "notebook==6.4.10",
    "numpy==1.19.5",
    "packaging==21.3",
    "pandas==1.1.5",
    "pandocfilters==1.5.0",
    "parso==0.7.1",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "prometheus-client==0.14.1",
    "prompt-toolkit==3.0.31",
    "ptyprocess==0.7.0",
    "pycparser==2.21",
    "Pygments==2.13.0",
    "pyparsing==3.0.9",
    "pyrsistent==0.18.0",
    "python-dateutil==2.8.2",
    "pytz==2022.2.1",
    "pyzmq==24.0.1",
    "qtconsole==5.2.2",
    "QtPy==2.0.1",
    "requests==2.27.1",
    "selenium==3.141.0",
    "Send2Trash==1.8.0",
    "six==1.16.0",
    "terminado==0.13.0",
    "testpath==0.6.0",
    "tornado==6.1",
    "traitlets==4.3.3",
    "typing-extensions==4.1.1",
    "urllib3==1.26.12",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
    "widgetsnbextension==3.6.1",
    "zipp==3.6.0",
]

[project.urls]
"Homepage" = "https://github.com/dheimgartner/tcscraper"
"Bug Tracker" = "https://github.com/dheimgartner/tcscraper/issues"